--- a/app/src/main/res/layout/score_cardview.xml
+++ b/app/src/main/res/layout/score_cardview.xml
@@ -10,8 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textSize="18dp"
         android:textColor="@color/colorPrimary"
+        android:textSize="18sp"
         android:visibility="gone" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -58,10 +58,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="2dp"
-            android:text="计算机科学导论"
+            android:layout_marginTop="4dp"
             android:textColor="#000000"
-            android:textSize="14dp"
+            android:textSize="14sp"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -72,8 +71,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="1dp"
-            android:text="1920183"
-            android:textSize="13dp"
+            android:layout_marginBottom="4dp"
+            android:textSize="13sp"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/course_name" />
@@ -82,9 +81,8 @@
             android:id="@+id/ScoreFinal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="85"
             android:textColor="#AA000000"
-            android:textSize="18dp"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline3"
             app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -94,8 +92,7 @@
             android:id="@+id/ScoreCheck"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="80.8"
-            android:textSize="16dp"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline4"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
@@ -105,8 +102,7 @@
             android:id="@+id/ScoreUsually"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="80.0"
-            android:textSize="16dp"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline4"
