--- a/app/src/main/res/layout/activity_average_textbook.xml
+++ b/app/src/main/res/layout/activity_average_textbook.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".moreFun.AverageTextbookActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".moreFun.AverageTextbookActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -16,35 +16,35 @@
 
         <ImageView
             android:id="@+id/average_textbook_back"
-            android:onClick="onClick"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            app:tint="@color/app_white"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:layout_marginStart="10dp"
-            android:src="@drawable/back" />
+            android:onClick="onClick"
+            android:src="@drawable/back"
+            app:tint="@color/app_white" />
 
         <TextView
             android:layout_width="wrap_content"
-            android:textSize="18sp"
-            android:text="评价教材"
-            android:textColor="@color/app_white"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginStart="50dp"
+            android:text="评价教材"
+            android:textColor="@color/app_white"
+            android:textSize="18sp"
             app:layout_constraintStart_toStartOf="@id/average_textbook_back"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/average_textbook_state"
             android:layout_width="wrap_content"
-            android:textSize="18sp"
-            android:text="正在更新"
-            android:textColor="@color/app_white"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginStart="150dp"
+            android:text="正在更新"
+            android:textColor="@color/app_white"
+            android:textSize="18sp"
             app:layout_constraintTop_toTopOf="parent" />
 
     </RelativeLayout>
@@ -65,7 +65,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.35"
             app:srcCompat="@drawable/d_tongbu"
-            app:tint="@color/colorAccent" />
+            app:tint="@color/colorAccent"
+            tools:ignore="ContentDescription" />
 
         <ProgressBar
             style="?android:attr/progressBarStyleHorizontal"
@@ -96,12 +97,11 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:background="@color/colorPrimary"
-        android:layout_margin="5dp"/>
+        android:layout_margin="5dp"
+        android:background="@color/colorPrimary" />
 
 
     <com.xuexiang.xui.widget.button.roundbutton.RoundButton
-        android:onClick="onClick"
         android:id="@+id/avg_textbook_start"
         android:layout_width="match_parent"
         android:layout_height="40dp"
@@ -109,6 +109,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginBottom="20dp"
+        android:onClick="onClick"
         android:text="开始自动评价教材"
         android:textColor="@android:color/white"
         android:textSize="23sp"
