--- a/app/src/main/res/layout/activity_cet.xml
+++ b/app/src/main/res/layout/activity_cet.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".moreFun.ExamActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".moreFun.ExamActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -16,36 +16,36 @@
 
         <ImageView
             android:id="@+id/CET_back"
-            android:onClick="onClick"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            app:tint="@color/app_white"
-            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:src="@drawable/back" />
+            android:layout_marginStart="10dp"
+            android:onClick="onClick"
+            android:src="@drawable/back"
+            app:tint="@color/app_white"
+            tools:ignore="ContentDescription" />
 
         <TextView
             android:id="@+id/CET_title"
             android:layout_width="wrap_content"
-            android:textSize="18dp"
-            android:text="CET"
-            android:textColor="@color/app_white"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="50dp"
+            android:layout_marginStart="50dp"
+            android:text="@string/moreFun_cet"
+            android:textColor="@color/app_white"
+            android:textSize="18sp"
             app:layout_constraintStart_toStartOf="@id/CET_back"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/CET_state"
             android:layout_width="wrap_content"
-            android:textSize="18dp"
-            android:text="正在更新"
-            android:textColor="@color/app_white"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="110dp"
+            android:layout_marginStart="110dp"
+            android:textColor="@color/app_white"
+            android:textSize="18sp"
             app:layout_constraintTop_toTopOf="parent" />
 
     </RelativeLayout>
@@ -65,7 +65,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.4"
             app:srcCompat="@drawable/d_kong"
-            app:tint="@color/colorPrimary" />
+            app:tint="@color/colorPrimary"
+            tools:ignore="ContentDescription" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
