--- a/app/src/main/res/layout/activity_exam.xml
+++ b/app/src/main/res/layout/activity_exam.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".moreFun.ExamActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".moreFun.ExamActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -16,45 +16,48 @@
 
         <ImageView
             android:id="@+id/exam_back"
-            android:onClick="onClick"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            app:tint="@color/app_white"
-            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:src="@drawable/back" />
+            android:layout_marginStart="10dp"
+            android:onClick="onClick"
+            android:src="@drawable/back"
+            app:tint="@color/app_white"
+            tools:ignore="ContentDescription" />
 
         <TextView
             android:layout_width="wrap_content"
-            android:textSize="18dp"
-            android:text="考试安排"
-            android:textColor="@color/app_white"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="50dp"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:text="@string/moreFun_test_schedule"
+            android:textColor="@color/app_white"
+            android:textSize="18sp"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="RelativeOverlap,RtlHardcoded" />
 
         <TextView
             android:id="@+id/exam_state"
             android:layout_width="wrap_content"
-            android:textSize="18dp"
-            android:text="正在更新"
-            android:textColor="@color/app_white"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="160dp"
+            android:layout_marginStart="160dp"
+            android:textColor="@color/app_white"
+            android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="RelativeOverlap" />
 
         <ImageView
             android:id="@+id/exam_more"
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="15dp"
-            android:src="@drawable/attribute"/>
+            android:layout_marginEnd="15dp"
+            android:src="@drawable/attribute"
+            tools:ignore="ContentDescription" />
 
     </RelativeLayout>
 
@@ -73,7 +76,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.4"
             app:srcCompat="@drawable/d_kong"
-            app:tint="@color/colorPrimary" />
+            app:tint="@color/colorPrimary"
+            tools:ignore="ContentDescription" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
