--- a/app/src/main/res/layout/activity_examscore.xml
+++ b/app/src/main/res/layout/activity_examscore.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".moreFun.ExamScoreActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".moreFun.ExamScoreActivity">
 
     <RelativeLayout
         android:id="@+id/more_head"
@@ -16,47 +16,50 @@
         tools:layout_editor_absoluteX="109dp">
 
         <ImageView
-            android:onClick="onClick"
             android:id="@+id/examscore_back"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            app:tint="@color/app_white"
-            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:src="@drawable/back" />
+            android:layout_marginStart="10dp"
+            android:onClick="onClick"
+            android:src="@drawable/back"
+            app:tint="@color/app_white"
+            tools:ignore="ContentDescription" />
 
         <TextView
             android:layout_width="wrap_content"
-            android:textSize="18dp"
-            android:text="考试成绩"
-            android:textColor="@color/app_white"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="50dp"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_marginStart="50dp"
+            android:text="@string/moreFun_test_scores"
+            android:textColor="@color/app_white"
+            android:textSize="18sp"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="RelativeOverlap" />
 
         <TextView
             android:id="@+id/examscore_state"
             android:layout_width="wrap_content"
-            android:textSize="18dp"
-            android:text="正在更新"
-            android:textColor="@color/app_white"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="160dp"
+            android:layout_marginStart="160dp"
+            android:textColor="@color/app_white"
+            android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="RelativeOverlap" />
 
         <ImageView
-            android:onClick="showPopMenu"
             android:id="@+id/exam_score_more"
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="15dp"
-            android:src="@drawable/attribute"/>
+            android:layout_marginEnd="15dp"
+            android:onClick="showPopMenu"
+            android:src="@drawable/attribute"
+            tools:ignore="ContentDescription" />
 
     </RelativeLayout>
 
@@ -75,14 +78,15 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.4"
             app:srcCompat="@drawable/d_kong"
-            app:tint="@color/colorPrimary" />
+            app:tint="@color/colorPrimary"
+            tools:ignore="ContentDescription" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
+        android:id="@+id/examscore_info_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/examscore_info_view"
         android:layout_marginBottom="8dp"
         android:orientation="vertical">
 
@@ -120,7 +124,7 @@
                 android:layout_marginTop="2dp"
                 android:text="课程"
                 android:textColor="#ffffff"
-                android:textSize="18dp"
+                android:textSize="18sp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline2"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -130,7 +134,7 @@
                 android:layout_height="wrap_content"
                 android:text="成绩"
                 android:textColor="#ffffff"
-                android:textSize="18dp"
+                android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/guideline3"
                 app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -141,7 +145,7 @@
                 android:layout_height="wrap_content"
                 android:text="考核"
                 android:textColor="#ffffff"
-                android:textSize="18dp"
+                android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/guideline4"
                 app:layout_constraintStart_toStartOf="@+id/guideline3"
@@ -152,7 +156,7 @@
                 android:layout_height="wrap_content"
                 android:text="平时"
                 android:textColor="#ffffff"
-                android:textSize="18dp"
+                android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/guideline4"
@@ -165,7 +169,6 @@
             android:layout_height="match_parent" />
 
     </LinearLayout>
-
 
 
 </LinearLayout>
