--- a/app/src/main/res/layout/activity_grades.xml
+++ b/app/src/main/res/layout/activity_grades.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".moreFun.GradesActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".moreFun.GradesActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -16,36 +16,36 @@
 
         <ImageView
             android:id="@+id/grades_back"
-            android:onClick="onClick"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            app:tint="@color/app_white"
-            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:src="@drawable/back" />
+            android:layout_marginStart="10dp"
+            android:onClick="onClick"
+            android:src="@drawable/back"
+            app:tint="@color/app_white"
+            tools:ignore="ContentDescription" />
 
         <TextView
             android:id="@+id/grades_title"
             android:layout_width="wrap_content"
-            android:textSize="18dp"
-            android:text="学分绩查询"
-            android:textColor="@color/app_white"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="50dp"
+            android:layout_marginStart="50dp"
+            android:text="@string/moreFun_credits"
+            android:textColor="@color/app_white"
+            android:textSize="18sp"
             app:layout_constraintStart_toStartOf="@id/grades_back"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/grades_state"
             android:layout_width="wrap_content"
-            android:textSize="18dp"
-            android:text="正在更新"
-            android:textColor="@color/app_white"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="160dp"
+            android:layout_marginStart="160dp"
+            android:textColor="@color/app_white"
+            android:textSize="18sp"
             app:layout_constraintTop_toTopOf="parent" />
 
     </RelativeLayout>
@@ -69,27 +69,27 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="45dp"
+                    android:layout_marginStart="45dp"
                     android:text="入学至今"
                     android:textColor="@color/app_black"
-                    android:textSize="16dp"/>
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/grades_main"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="200dp"
+                    android:layout_marginStart="200dp"
                     android:text="100"
                     android:textColor="@color/app_black"
-                    android:textSize="16dp"/>
+                    android:textSize="16sp" />
 
             </RelativeLayout>
 
             <View
-                android:layout_marginLeft="53dp"
                 android:layout_width="fill_parent"
                 android:layout_height="0.1dp"
+                android:layout_marginStart="53dp"
                 android:background="@color/xui_config_color_gray_9" />
 
             <RelativeLayout
@@ -101,27 +101,26 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="45dp"
+                    android:layout_marginStart="45dp"
                     android:text="大一学年"
                     android:textColor="@color/app_black"
-                    android:textSize="16dp"/>
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/grades_year_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="200dp"
-                    android:text="100"
+                    android:layout_marginStart="200dp"
                     android:textColor="@color/app_black"
-                    android:textSize="16dp"/>
+                    android:textSize="16sp" />
 
             </RelativeLayout>
 
             <View
-                android:layout_marginLeft="53dp"
                 android:layout_width="fill_parent"
                 android:layout_height="0.1dp"
+                android:layout_marginStart="53dp"
                 android:background="@color/xui_config_color_gray_9" />
 
             <RelativeLayout
@@ -133,27 +132,26 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="45dp"
+                    android:layout_marginStart="45dp"
                     android:text="大二学年"
                     android:textColor="@color/app_black"
-                    android:textSize="16dp"/>
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/grades_year_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="200dp"
-                    android:text="100"
+                    android:layout_marginStart="200dp"
                     android:textColor="@color/app_black"
-                    android:textSize="16dp"/>
+                    android:textSize="16sp" />
 
             </RelativeLayout>
 
             <View
-                android:layout_marginLeft="53dp"
                 android:layout_width="fill_parent"
                 android:layout_height="0.1dp"
+                android:layout_marginStart="53dp"
                 android:background="@color/xui_config_color_gray_9" />
 
             <RelativeLayout
@@ -165,27 +163,26 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="45dp"
+                    android:layout_marginStart="45dp"
                     android:text="大三学年"
                     android:textColor="@color/app_black"
-                    android:textSize="16dp"/>
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/grades_year_3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="200dp"
-                    android:text="100"
+                    android:layout_marginStart="200dp"
                     android:textColor="@color/app_black"
-                    android:textSize="16dp"/>
+                    android:textSize="16sp" />
 
             </RelativeLayout>
 
             <View
-                android:layout_marginLeft="53dp"
                 android:layout_width="fill_parent"
                 android:layout_height="0.1dp"
+                android:layout_marginStart="53dp"
                 android:background="@color/xui_config_color_gray_9" />
 
             <RelativeLayout
@@ -197,27 +194,26 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="45dp"
+                    android:layout_marginStart="45dp"
                     android:text="大四学年"
                     android:textColor="@color/app_black"
-                    android:textSize="16dp"/>
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/grades_year_4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="200dp"
-                    android:text="100"
+                    android:layout_marginStart="200dp"
                     android:textColor="@color/app_black"
-                    android:textSize="16dp"/>
+                    android:textSize="16sp" />
 
             </RelativeLayout>
 
             <View
-                android:layout_marginLeft="53dp"
                 android:layout_width="fill_parent"
                 android:layout_height="0.1dp"
+                android:layout_marginStart="53dp"
                 android:background="@color/xui_config_color_gray_9" />
 
             <RelativeLayout
@@ -229,27 +225,26 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="45dp"
+                    android:layout_marginStart="45dp"
                     android:text="大五学年"
                     android:textColor="@color/app_black"
-                    android:textSize="16dp"/>
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/grades_year_5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="200dp"
-                    android:text="100"
+                    android:layout_marginStart="200dp"
                     android:textColor="@color/app_black"
-                    android:textSize="16dp"/>
+                    android:textSize="16sp" />
 
             </RelativeLayout>
 
             <View
-                android:layout_marginLeft="53dp"
                 android:layout_width="fill_parent"
                 android:layout_height="0.1dp"
+                android:layout_marginStart="53dp"
                 android:background="@color/xui_config_color_gray_9" />
 
             <RelativeLayout
@@ -261,27 +256,26 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="45dp"
+                    android:layout_marginStart="45dp"
                     android:text="大六学年"
                     android:textColor="@color/app_black"
-                    android:textSize="16dp"/>
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/grades_year_6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="200dp"
-                    android:text="100"
+                    android:layout_marginStart="200dp"
                     android:textColor="@color/app_black"
-                    android:textSize="16dp"/>
+                    android:textSize="16sp" />
 
             </RelativeLayout>
 
             <View
-                android:layout_marginLeft="53dp"
                 android:layout_width="fill_parent"
                 android:layout_height="0.1dp"
+                android:layout_marginStart="53dp"
                 android:background="@color/xui_config_color_gray_9" />
 
             <RelativeLayout
@@ -290,28 +284,26 @@
                 android:layout_margin="8dp">
 
                 <ImageView
-
                     android:layout_width="29dp"
                     android:layout_height="29dp"
                     android:layout_centerVertical="true"
+                    android:layout_marginStart="4dp"
                     android:src="@drawable/p_bangzhu"
-                    android:layout_marginLeft="4dp"/>
+                    tools:ignore="ContentDescription" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="45dp"
+                    android:layout_marginStart="45dp"
                     android:text="学分绩查询属于公测阶段，正在逐步优化，目前计算方法为只统计对应年度及格的必修和限选课程，若您有更好的计算方法，欢迎进群反馈，我们一起让它变好！(V2)"
-                    android:textSize="13dp"/>
+                    android:textSize="13sp" />
 
             </RelativeLayout>
-
 
         </LinearLayout>
 
     </ScrollView>
-
 
 
 </LinearLayout>
