--- a/app/src/main/res/layout/activity_help_test.xml
+++ b/app/src/main/res/layout/activity_help_test.xml
@@ -64,10 +64,10 @@
                     style="@style/ButtonView.Blue"
                     android:layout_width="140dp"
                     android:layout_height="40dp"
+                    android:onClick="developStart"
                     android:text="调试"
                     android:textColor="#FFFFFF"
                     android:textSize="14sp"
-                    android:onClick="developStart"
                     app:layout_constraintBottom_toBottomOf="@+id/develop_close"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/guideline6"
@@ -79,10 +79,10 @@
                     android:layout_width="140dp"
                     android:layout_height="40dp"
                     android:layout_marginTop="28dp"
+                    android:onClick="developClose"
                     android:text="关闭"
                     android:textColor="#FFFFFF"
                     android:textSize="14sp"
-                    android:onClick="developClose"
                     app:layout_constraintEnd_toStartOf="@+id/guideline6"
                     app:layout_constraintHorizontal_bias="0.484"
                     app:layout_constraintStart_toStartOf="parent"
@@ -123,6 +123,7 @@
                     android:layout_marginTop="20dp"
                     android:ems="10"
                     android:hint="输入凭证"
+                    android:importantForAutofill="no"
                     android:inputType="textPersonName"
                     android:textColorHint="#888888"
                     app:layout_constraintEnd_toEndOf="parent"
