--- a/app/src/main/res/layout/activity_helper.xml
+++ b/app/src/main/res/layout/activity_helper.xml
@@ -18,20 +18,21 @@
             android:id="@+id/helper_back"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:src="@drawable/back"
-            app:tint="@color/app_white" />
+            app:tint="@color/app_white"
+            tools:ignore="ContentDescription" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="50dp"
-            android:text="帮助与进阶"
+            android:layout_marginStart="50dp"
+            android:text="@string/person_help"
             android:textColor="@color/app_white"
-            android:textSize="18dp"
+            android:textSize="18sp"
             app:layout_constraintStart_toStartOf="@id/helper_back"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -43,7 +44,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:orientation="vertical">
 
@@ -52,13 +53,13 @@
                 android:layout_height="wrap_content"
                 android:text="帮助:"
                 android:textColor="@color/colorPrimary"
-                android:textSize="22dp" />
+                android:textSize="22sp" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/help_1"
-                android:textSize="18dp" />
+                android:textSize="18sp" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -68,7 +69,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/help_2"
-                android:textSize="18dp" />
+                android:textSize="18sp" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -78,7 +79,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/help_3"
-                android:textSize="18dp" />
+                android:textSize="18sp" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -89,13 +90,13 @@
                 android:layout_height="wrap_content"
                 android:text="进阶:"
                 android:textColor="@color/colorPrimary"
-                android:textSize="22dp" />
+                android:textSize="22sp" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/help_more_1"
-                android:textSize="18dp" />
+                android:textSize="18sp" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -105,7 +106,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/help_more_2"
-                android:textSize="18dp" />
+                android:textSize="18sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -116,32 +117,31 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="QQ群:"
-                    android:textSize="18dp" />
+                    android:textSize="18sp" />
 
                 <EditText
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:importantForAutofill="no"
                     android:text="963908505"
                     android:textColor="@color/app_black"
-                    android:textSize="17dp" />
+                    android:textSize="17sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="或"
-                    android:textSize="18dp" />
+                    android:textSize="18sp" />
 
                 <com.xuexiang.xui.widget.button.roundbutton.RoundButton
                     android:id="@+id/btn_join2"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentLeft="true"
                     android:layout_marginLeft="15dp"
                     android:layout_marginRight="15dp"
                     android:text="一键加群"
                     android:textColor="@android:color/white"
-                    android:textSize="18dp"
+                    android:textSize="18sp"
                     app:rb_backgroundColor="@color/app_blue1" />
 
             </LinearLayout>
