--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -9,21 +9,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:ignore="UselessParent">
 
         <ImageView
-            android:layout_marginLeft="40dp"
-            android:layout_marginBottom="5dp"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_centerInParent="true"
-            android:src="@drawable/table"/>
+            android:layout_marginStart="40dp"
+            android:layout_marginBottom="5dp"
+            android:src="@drawable/table"
+            tools:ignore="ContentDescription" />
 
         <ImageView
             android:layout_width="180dp"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:src="@drawable/app_name"/>
+            android:src="@drawable/app_name"
+            tools:ignore="ContentDescription" />
 
     </LinearLayout>
 
