--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -20,20 +20,21 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             app:tint="@color/app_white"
-            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:src="@drawable/back" />
+            android:layout_marginStart="10dp"
+            android:src="@drawable/back"
+            tools:ignore="ContentDescription" />
 
         <TextView
             android:id="@+id/grades_title"
             android:layout_width="wrap_content"
-            android:textSize="18dp"
+            android:textSize="18sp"
             android:text="设置"
             android:textColor="@color/app_white"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="50dp"
+            android:layout_marginStart="50dp"
             app:layout_constraintStart_toStartOf="@id/setting_back"
             app:layout_constraintTop_toTopOf="parent" />
 
