--- a/app/src/main/res/layout/detail_cardview.xml
+++ b/app/src/main/res/layout/detail_cardview.xml
@@ -15,14 +15,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="5dp"
+            android:layout_marginStart="5dp"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/detail_text_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="18dp"
+                android:textSize="18sp"
                 android:layout_marginBottom="3dp"
                 android:textColor="#000000"
                 android:layout_marginTop="3dp"/>
