--- a/app/src/main/res/layout/fragment_base_func.xml
+++ b/app/src/main/res/layout/fragment_base_func.xml
@@ -4,16 +4,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/header_base_func"/>
+    <include layout="@layout/header_base_func" />
+
     <com.zhuangfei.timetable.view.WeekView
         android:id="@+id/id_weekview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
 
     <com.zhuangfei.timetable.TimetableView
         android:id="@+id/id_timetableView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </com.zhuangfei.timetable.TimetableView>
+        android:layout_height="match_parent" />
 
 </LinearLayout>
