--- a/app/src/main/res/layout/fragment_day_class.xml
+++ b/app/src/main/res/layout/fragment_day_class.xml
@@ -209,7 +209,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/day_class_detail_recycleView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
