--- a/app/src/main/res/layout/header_base_func.xml
+++ b/app/src/main/res/layout/header_base_func.xml
@@ -1,46 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="45dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorPrimary">
 
     <ImageButton
         android:id="@+id/next_week"
         android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_marginStart="10dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:src="@drawable/ic_next"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/id_class_layout"
-        android:layout_height="24dp">
-    </ImageButton>
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription" />
 
     <ImageButton
         android:id="@+id/pre_week"
         android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_marginEnd="15dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/ic_pre"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/id_class_layout"
-        android:src="@drawable/ic_pre"
-        android:layout_height="24dp">
-
-    </ImageButton>
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription" />
 
 
     <LinearLayout
 
+        android:id="@+id/id_class_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:gravity="center_horizontal"
-        android:id="@+id/id_class_layout"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
 
         <LinearLayout
@@ -53,7 +53,6 @@
                 android:id="@+id/id_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="课程表"
                 android:textColor="@color/app_white"
                 android:textSize="16sp" />
 
@@ -62,17 +61,19 @@
                 android:layout_height="wrap_content"
                 android:text="选择周次"
                 android:textColor="@color/ic_launcher_background"
-                android:textSize="10sp" />
+                android:textSize="10sp"
+                tools:ignore="SmallSp" />
 
         </LinearLayout>
 
         <ImageView
             android:id="@+id/deltaIcon"
-            android:layout_marginBottom="6dp"
             android:layout_width="25dp"
             android:layout_height="15dp"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/delta"/>
+            android:layout_marginBottom="6dp"
+            android:src="@drawable/delta"
+            tools:ignore="ContentDescription" />
 
     </LinearLayout>
 
@@ -80,12 +81,12 @@
         android:id="@+id/id_more"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_margin="10dp"
         android:layout_centerVertical="true"
+        android:layout_margin="10dp"
+        android:src="@drawable/attribute"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-
-        android:src="@drawable/attribute"/>
+        tools:ignore="ContentDescription" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
