--- a/app/src/main/res/layout/planned_course_cardview.xml
+++ b/app/src/main/res/layout/planned_course_cardview.xml
@@ -10,8 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textSize="18dp"
         android:textColor="#673AB7"
+        android:textSize="18sp"
         android:visibility="gone" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -53,9 +53,8 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="3dp"
             android:layout_marginBottom="3dp"
-            android:text="计算机科学导论"
             android:textColor="#ff000000"
-            android:textSize="16dp"
+            android:textSize="16sp"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -64,8 +63,7 @@
             android:id="@+id/planned_course_credits"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2.50"
-            android:textSize="16dp"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline3"
             app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -75,47 +73,13 @@
             android:id="@+id/planned_course_degree"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="80.8"
             android:textColor="#AA000000"
-            android:textSize="18dp"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:background="@color/app_white"-->
-<!--        android:orientation="horizontal">-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/planned_course_name"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_weight="1"-->
-<!--            android:gravity="center"-->
-<!--            android:textSize="16dp" />-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/planned_course_credits"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_weight="1.5"-->
-<!--            android:gravity="center"-->
-<!--            android:textSize="16dp" />-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/planned_course_degree"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_weight="1.5"-->
-<!--            android:gravity="center"-->
-<!--            android:textSize="16dp" />-->
-
-
-<!--    </LinearLayout>-->
 
 </LinearLayout>
