--- a/app/src/main/res/layout/update_dialog.xml
+++ b/app/src/main/res/layout/update_dialog.xml
@@ -1,30 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/app_white"
     android:gravity="center"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="12dp" >
+        android:padding="12dp">
 
         <ImageView
             android:id="@+id/iv_dialoghint"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginRight="16dp"
-            android:src="@drawable/d_shengji" />
+            android:layout_marginEnd="16dp"
+            android:src="@drawable/d_shengji"
+            tools:ignore="ContentDescription" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -36,24 +38,23 @@
                     android:layout_height="wrap_content"
                     android:text="课程表可以更新了"
                     android:textColor="#000"
-                    android:textSize="18dp"
+                    android:textSize="18sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
                     android:id="@+id/imageView_no"
-                    android:clickable="true"
                     android:layout_width="18dp"
                     android:layout_height="18dp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:src="@drawable/d_guanbi"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:src="@drawable/d_guanbi"
-                    app:tint="@color/cardview_dark_background" />
-
+                    app:tint="@color/cardview_dark_background"
+                    tools:ignore="ContentDescription" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 
             <TextView
                 android:id="@+id/tv_dialoghint"
@@ -61,9 +62,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:text=""
-                android:textSize="16dp" />
+                android:textSize="16sp" />
 
         </LinearLayout>
+
     </LinearLayout>
 
     <View
@@ -74,14 +76,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/btn_hint_addQQ"
-            android:clickable="true"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:clickable="true"
+            android:focusable="true"
             android:padding="8dp"
             android:text="群内下载"
             android:textColor="@color/colorPrimary"
@@ -94,10 +97,11 @@
 
         <Button
             android:id="@+id/btn_hint_yes"
-            android:clickable="true"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:clickable="true"
+            android:focusable="true"
             android:padding="8dp"
             android:text="更新"
             android:textColor="@color/colorPrimary"
