perf:类文件分类

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -30,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginStart="50dp"
-            android:text="关于"
+            android:text="@string/person_about"
             android:textColor="@color/app_white"
             android:textSize="18sp"
             app:layout_constraintTop_toTopOf="parent" />
